cluster/apps/default/bookstack/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: bookstack
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: HOST(`bookstack.${SECRET_DOMAIN}`)
      kind: Rule
      middlewares:
        - name: internal-ipwhitelist
          namespace: traefik
      services:
        - name: bookstack
          port: 80
  tls:
    secretName: ${SECRET_CERT}
